# update-cockpit

./: .gitignore  Cargo.toml  README.md
scripts/: brew.zsh  flutter.zsh  julia.zsh  node.zsh  npm-tools.zsh  rust.zsh  sdkman.zsh
scripts/lib/: common.zsh  nvm.zsh
src/: app.rs  catalog.rs  cli.rs  lib.rs  main.rs  persistence.rs  profiles.rs  runner.rs  workspace.rs
src/tui/: app.rs  mod.rs  state.rs
tasks/: brew.toml  flutter.toml  julia.toml  node.toml  npm-tools.toml  rust.toml  sdkman.toml
